--- a/tigamap/templates/tigamap/app_filtered.html
+++ b/tigamap/templates/tigamap/app_filtered.html
@@ -167,8 +167,7 @@ function removeMe(){
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
    <li>
-                                <button type="button" class="btn btn-warning btn-sm navbar-btn" data-toggle="modal" data-target=".bs-example-modal-lg"
-                                        style="margin-left:5px"><span class="glyphicon glyphicon-filter"></span> Filter
+                                <button type="button" class="btn btn-warning btn-sm navbar-btn" data-toggle="modal" data-target="#myModal" style="margin-left:5px"><span class="glyphicon glyphicon-filter"></span> Filter
                                 </button>
                             </li>
 
