--- a/tigamap/templates/tigamap/validated_report_map_filters.html
+++ b/tigamap/templates/tigamap/validated_report_map_filters.html
@@ -123,194 +123,209 @@
         }
 
         {% block conditional_legend %}
-        @media (max-width: 700px), (max-height: 570px) {
-            .legend {
-                display: none;
+            @media (max-width: 700px), (max-height: 570px) {
+                .legend {
+                    display: none;
+                }
+
+                #hand-left {
+                    display: none;
+                }
+
+                #more_info_div {
+                    display: none;
+                }
+
+                #more_info_button {
+                    display: none;
+                }
+
+                .legend-main-table {
+                    display: none;
+                }
+
+                .legend-main-table, .legend-main-table tr, .legend-main-table td {
+                    display: none;
+                }
+
+                .legend-popup-area {
+                    display: none;
+                }
+
+                .legend-popup {
+                    display: none;
+                }
+
+                .legend-popup-table {
+                    display: none;
+                }
+
+                .legend-popup-table td {
+                    display: none;
+                }
+
+                .legend-popup-table a {
+                    display: none;
+                }
+
+                .legend-popup-infodiv {
+                    display: none;
+                }
+
+                .info-button-background {
+                    display: none;
+                }
+
+                .info-button-background img {
+                    display: none;
+                }
+
+                .infodiv-table {
+                    display: none;
+                }
+
+                .infodiv-table td {
+                    display: none;
+                }
             }
-            #hand-left {
-                display: none;
-            }
-            #more_info_div {
-                display: none;
-            }
-            #more_info_button {
-                display: none;
-            }
-            .legend-main-table {
-                display: none;
-            }
-            .legend-main-table, .legend-main-table tr, .legend-main-table td {
-                display: none;
-            }
-            .legend-popup-area {
-                display: none;
-            }
-            .legend-popup {
-                display: none;
-            }
-            .legend-popup-table {
-                display: none;
-            }
-            .legend-popup-table td {
-                display: none;
-            }
-            .legend-popup-table a {
-                display: none;
-            }
-            .legend-popup-infodiv {
-                display: none;
-            }
-            .info-button-background {
-                display: none;
-            }
-            .info-button-background img {
-                display: none;
-            }
-            .infodiv-table {
-                display: none;
-            }
-            .infodiv-table td {
-                display: none;
-            }
+        {% endblock %}
+
+        .legend {
+            background-color: rgb(200, 200, 200);
+            border-top-right-radius: 15px;
+            border-bottom-right-radius: 15px;
+            position: absolute;
+            left: -320px;
+            border: 1px solid;
+            bottom: 60px;
+            width: 430px;
+            min-height: 340px;
+            overflow: hidden;
+            -moz-transition: left 1s ease;
+            -webkit-transition: left 1s ease;
         }
-            {% endblock %}
-            .legend {
-                background-color: rgb(200, 200, 200);
-                border-top-right-radius: 15px;
-                border-bottom-right-radius: 15px;
-                position: absolute;
-                left: -320px;
-                border: 1px solid;
-                bottom: 60px;
-                width: 430px;
-                min-height: 340px;
-                overflow: hidden;
-                -moz-transition: left 1s ease;
-                -webkit-transition: left 1s ease;
-            }
 
-            .legend:hover {
-                left: 0;
-            }
+        .legend:hover {
+            left: 0;
+        }
 
-            #hand-left {
-                opacity: 1;
-                                    position:absolute;
-                    right: 35px;
-                    bottom: 10px;
+        #hand-left {
+            opacity: 1;
+            position: absolute;
+            right: 35px;
+            bottom: 10px;
 
-                -moz-transition: opacity 2s ease;
-                -webkit-transition: opacity 2s ease;
-            }
+            -moz-transition: opacity 2s ease;
+            -webkit-transition: opacity 2s ease;
+        }
 
-            #more_info_div {
-                position: absolute;
-                bottom: 10px;
-                right: 35px;
-                opacity: 0;
-                -moz-transition: opacity 3s ease;
-                -webkit-transition: opacity 3s ease;
+        #more_info_div {
+            position: absolute;
+            bottom: 10px;
+            right: 35px;
+            opacity: 0;
+            -moz-transition: opacity 3s ease;
+            -webkit-transition: opacity 3s ease;
 
-            }
+        }
 
-            #more_info_button {
-                position: absolute;
-                bottom: 5px;
-                right: 0;
-            }
+        #more_info_button {
+            position: absolute;
+            bottom: 5px;
+            right: 0;
+        }
 
-            .legend:hover #hand-left {
-                opacity: 0;
-            }
+        .legend:hover #hand-left {
+            opacity: 0;
+        }
 
-            .legend:hover #more_info_div {
-                opacity: 1;
-            }
+        .legend:hover #more_info_div {
+            opacity: 1;
+        }
 
-            .legend-main-table-container {
-                max-width: 50px;
-                position: absolute;
-                right: 50px;
-                top: 10px;
-            }
+        .legend-main-table-container {
+            max-width: 50px;
+            position: absolute;
+            right: 50px;
+            top: 10px;
+        }
 
+        .legend-main-table {
+            max-width: 50px;
+        }
 
-            .legend-main-table {
-                max-width: 50px;
-            }
+        .legend-main-table, .legend-main-table tr, .legend-main-table td {
+            border: none;
+            padding: 4px;
+            text-align: left;
+            vertical-align: middle;
+            font-size: .9em;
+        }
 
-            .legend-main-table, .legend-main-table tr, .legend-main-table td {
-                border: none;
-                padding: 4px;
-                text-align: left;
-                vertical-align: middle;
-                font-size: .9em;
-            }
+        .legend-popup-area {
+            position: absolute !important;
+            left: 10px !important;
+            bottom: 0 !important;
+            top: 14px !important;
+            width: 310px;
+        }
 
-            .legend-popup-area {
-                position: absolute !important;
-                left: 10px !important;
-                bottom: 0 !important;
-                top: 14px !important;
-                width: 310px;
-            }
+        .legend-popup {
+            z-index: 1;
+        }
 
-            .legend-popup {
-                z-index: 1;
-            }
+        .legend-popup-table {
+            width: 240px !important;
+            border: 1px solid;
+            text-align: left;
+            padding: 5px !important;
+            vertical-align: middle;
+            font-size: .85em;
+        }
 
-            .legend-popup-table {
-                width: 240px !important;
-                border: 1px solid;
-                text-align: left;
-                padding: 5px !important;
-                vertical-align: middle;
-                font-size: .85em;
-            }
+        .legend-popup-table td {
+            padding: 5px !important;
+        }
 
-            .legend-popup-table td {
-                padding: 5px !important;
-            }
+        .legend-popup-table a {
+            font-weight: bold;
+            color: #000000;
+        }
 
-            .legend-popup-table a {
-                font-weight: bold;
-                color: #000000;
-            }
+        .legend-popup-infodiv {
+            padding-top: 5px;
+            padding-bottom: 5px;
+            width: 100%;
+            height: 100%;
+        }
 
-            .legend-popup-infodiv {
-                padding-top: 5px;
-                padding-bottom: 5px;
-                width: 100%;
-                height: 100%;
-            }
+        .info-button-background {
+            background-color: #aaaaaa;
+            border-radius: 50%;
+            height: 30px;
+            width: 30px;
+        }
 
-            .info-button-background {
-                background-color: #aaaaaa;
-                border-radius: 50%;
-                height: 30px;
-                width: 30px;
-            }
+        .info-button-background img {
+            vertical-align: middle;
+        }
 
-            .info-button-background img {
-                vertical-align: middle;
-            }
+        .info-button-background:hover {
+            background-color: white !important;
+        }
 
-            .info-button-background:hover {
-                background-color: white !important;
-            }
+        .infodiv-table {
+            padding: 3px;
+            vertical-align: middle;
+            text-align: left;
+            font-size: 1.2em;
+        }
 
-            .infodiv-table {
-                padding: 3px;
-                vertical-align: middle;
-                text-align: left;
-                font-size: 1.2em;
-            }
-
-            .infodiv-table td {
-                vertical-align: middle;
-                padding-left: 5px !important;
-                border: none !important;
-            }
+        .infodiv-table td {
+            vertical-align: middle;
+            padding-left: 5px !important;
+            border: none !important;
+        }
 
         </style>
 
@@ -451,6 +466,18 @@
             }
 
 
+            function add_data_to_map(data) {
+                $.each(data, function (index, value) {
+                    if (value != null && value.lat != null && value.lon != null && value.type != null) {
+                        markers_clustered.addLayer(L.marker([value.lat, value.lon], {icon: get_icon(value.movelab_annotation)}).bindPopup(make_popup_text(value), popup_options));
+
+                    }
+                });
+
+                markers_clustered.addTo(map);
+
+            }
+
             function get_data(day, map) {
                 var csrftoken = $.cookie('csrftoken');
                 $.ajax({
@@ -467,14 +494,7 @@
 
                         if (data != null && data.length > 0) {
 
-                            $.each(data, function (index, value) {
-                                if (value != null && value.lat != null && value.lon != null && value.type != null) {
-                                    markers_clustered.addLayer(L.marker([value.lat, value.lon], {icon: get_icon(value.movelab_annotation)}).bindPopup(make_popup_text(value), popup_options));
-
-                                }
-                            });
-
-                            markers_clustered.addTo(map);
+                            add_data_to_map(data);
 
                         }
                         percent_done = Math.floor(100 * day_just_finished++ /{{ end_day }});
@@ -529,58 +549,58 @@
 
         <div class="legend">
             <div class="legend-main-table-container">
-            <table class="legend-main-table">
-                <tr>
-                    <td colspan="2">
-                        <p style="font-weight: bold; font-size: 1.2em;">{% trans 'adult_report_legend_main_title' %}</p>
-                    </td>
-                </tr>
+                <table class="legend-main-table">
+                    <tr>
+                        <td colspan="2">
+                            <p style="font-weight: bold; font-size: 1.2em;">{% trans 'adult_report_legend_main_title' %}</p>
+                        </td>
+                    </tr>
 
-                <tr>
-                    <td>
-                        <img src="{% static 'tigamap/yellow_red_dot.png' %}">
-                    </td>
-                    <td>
-                        {% trans 'expert_cat_tiger' %}
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <img src="{% static 'tigamap/yellow_orange_dot.png' %}">
-                    </td>
-                    <td>
-                        {% trans 'expert_cat_possible_tiger' %}
-                    </td>
-                </tr>
+                    <tr>
+                        <td>
+                            <img src="{% static 'tigamap/yellow_red_dot.png' %}">
+                        </td>
+                        <td>
+                            {% trans 'expert_cat_tiger' %}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="{% static 'tigamap/yellow_orange_dot.png' %}">
+                        </td>
+                        <td>
+                            {% trans 'expert_cat_possible_tiger' %}
+                        </td>
+                    </tr>
 
-                <tr>
-                    <td>
-                        <img src="{% static 'tigamap/yellow_white_dot.png' %}">
-                    </td>
-                    <td>
-                        {% trans 'expert_cat_unknown' %}
-                    </td>
-                </tr>
+                    <tr>
+                        <td>
+                            <img src="{% static 'tigamap/yellow_white_dot.png' %}">
+                        </td>
+                        <td>
+                            {% trans 'expert_cat_unknown' %}
+                        </td>
+                    </tr>
 
-                <tr>
-                    <td>
-                        <img src="{% static 'tigamap/yellow_grey_dot.png' %}">
-                    </td>
-                    <td>
-                        {% trans 'expert_cat_possible_other' %}
-                    </td>
-                </tr>
+                    <tr>
+                        <td>
+                            <img src="{% static 'tigamap/yellow_grey_dot.png' %}">
+                        </td>
+                        <td>
+                            {% trans 'expert_cat_possible_other' %}
+                        </td>
+                    </tr>
 
-                <tr>
-                    <td>
-                        <img src="{% static 'tigamap/yellow_black_dot.png' %}">
-                    </td>
-                    <td>
-                        {% trans 'expert_cat_other' %}
-                    </td>
-                </tr>
-            </table>
-        </div>
+                    <tr>
+                        <td>
+                            <img src="{% static 'tigamap/yellow_black_dot.png' %}">
+                        </td>
+                        <td>
+                            {% trans 'expert_cat_other' %}
+                        </td>
+                    </tr>
+                </table>
+            </div>
 
             <div class="legend-popup-area">
                 <div style="width:200px">
@@ -639,11 +659,10 @@
                 </div>
 
 
-
             </div>
 
 
-                        <i id="hand-left" style="padding-left:10px;" class="fa fa-hand-o-left fa-2x"></i>
+            <i id="hand-left" style="padding-left:10px;" class="fa fa-hand-o-left fa-2x"></i>
 
         </div>
 
