--- a/tigamap/templates/tigamap/app_filtered.html
+++ b/tigamap/templates/tigamap/app_filtered.html
@@ -167,7 +167,7 @@ function removeMe(){
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <div class="navbar-brand shrinking-text" style="color:#fff;">{{ title }}</div>
+                        <div class="navbar-brand" title="Tigatrapp Map" style="color:orange;margin-right:15px"><strong>Tigatrapp Map</strong></div>
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
