--- a/tigamap/templates/tigamap/validated_report_map_filters.html
+++ b/tigamap/templates/tigamap/validated_report_map_filters.html
@@ -484,7 +484,7 @@
                 function apply_filter() {
 
                     markers_clustered.clearLayers();
-                     add_to_layer(markers_all, markers_clustered, true);
+                     add_to_layer(full_data, markers_clustered, true);
                 }
 
             {%  endblock %}
