--- a/tigamap/templates/tigamap/validated_report_map_filters.html
+++ b/tigamap/templates/tigamap/validated_report_map_filters.html
@@ -470,8 +470,8 @@
 
             function add_to_layer(data, this_layer, filter) {
                 $.each(data, function (index, value) {
-                    if (value != null && value.lat != null && value.lon != null && value.type != null && (!filter ||
-                            (selected_year == 0 || value.creation_year == selected_year))) {
+                    if (value != null && value.lat != null && value.lon != null && value.type != null && value.type == selected_type && (!filter ||
+                            ( (selected_year == 0 || value.creation_year == selected_year) && (selected_month == 0 || value.creation_month == selected_month) && (selected_validation == -2 || value.movelab_annotation.tiger_certainty_category >= selected_validation))) ) {
                         this_layer.addLayer(L.marker([value.lat, value.lon], {icon: get_icon(value.movelab_annotation)}).bindPopup(make_popup_text(value), popup_options));
 
                     }
