--- a/tigamap/templates/tigamap/app_filtered.html
+++ b/tigamap/templates/tigamap/app_filtered.html
@@ -405,6 +405,9 @@
 
         $("#filters_submit_button").on('click', function () {
             selected_year = $("#year_select").val();
+            selected_month = $("#month_select").val();
+            selected_type = $("#type_select").val();
+            selected_validation = $("#validation_select").val();
 
             apply_filter();
 
